Fleshing out form interaction; needs csrf token embedded for lean experience, fixing asset paths for deep collection traversal

--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>{{title}}</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="assets/css/bulma.css" media="print,screen">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css" media="print,screen">
-	<link rel="shortcut icon" href="assets/img/favicon.png">
+	<link rel="stylesheet" type="text/css" href="/assets/css/bulma.css" media="print,screen">
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css" media="print,screen">
+	<link rel="shortcut icon" href="/assets/img/favicon.png">
 </head>
 <body>
 
@@ -105,7 +105,7 @@
 <footer class="footer">
 	<div class="container">
 		<div class="content has-text-centered">
-			<p><a href="http://avoidwork.com" title="Visit avoidwork.com"><img src="assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
+			<p><a href="http://avoidwork.com" title="Visit avoidwork.com"><img src="/assets/img/avoidwork.svg" class="avoidwork logo" /></a><br>
 				<a href="https://github.com/avoidwork/tenso" title="View project homepage">Tensō</a> {{version}}</p>
 		</div>
 	</div>
@@ -113,8 +113,8 @@
 
 <div id="allow" class="dr-hidden">{{allow}}</div>
 
-<script type="application/javascript" src="assets/js/dom-router.min.js"></script>
-<script type="application/javascript" src="assets/js/app.js"></script>
+<script type="application/javascript" src="/assets/js/dom-router.min.js"></script>
+<script type="application/javascript" src="/assets/js/app.js"></script>
 
 </body>
 </html>
